# QKaraoke

./: CMakeLists.txt  Main.qml  README.md  main.cpp
